--- a/resume.html
+++ b/resume.html
@@ -31,16 +31,6 @@
 	
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
-    <!-- Preloader -->
-	<div class="spinner-wrapper">
-        <div class="spinner">
-            <div class="bounce1"></div>
-            <div class="bounce2"></div>
-            <div class="bounce3"></div>
-        </div>
-    </div>
-    <!-- end of preloader -->
-    
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top top-nav-collapse">
@@ -62,7 +52,9 @@
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="index.html">ABOUT ME <span class="sr-only">(current)</span></a>
                 </li>
-                
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="index.html#portfolio">PORTFOLIO</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="resume.html">RESUME</a>
                 </li>               
