--- a/resume.html
+++ b/resume.html
@@ -72,8 +72,8 @@
 
     	<div class="col-12 text-center" style="padding-top: 100px">
     		<h1 style="color: #33415C;">Resume</h1>
-    		<h4>In case you're interesed in taking a look at it, here is a picture of it.</h4>
-    		<img class="img-fluid" style="width: 50%;" src="images/AngellyCV.png">
+    		<p style="color: #33415C; font-size: 18px;">In case you're interesed in taking a look, here is a picture of it.</p>
+    		<img class="img-fluid" style="width: 70%;" src="images/AngellyCV.png">
     	</div>
     	
     </div>
