--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="col-10 offset-1 text-center" style="padding-top: 60px; padding-bottom: 60px;">
                 <h2 style="color: #33415C;">ABOUT ME</h2>
                 <br/>
-                <p style="color: #33415C; font-size: 18px;">I'm a computer scientist exploring in the Geoinformatics world. Currently, I'm involved in a couple Geospatial Data Analysis projects, trying to learn as much as possible in my MSc classes and seeking for remote jobs to gain some real work experience to apply what I know and learn much more.</p>
+                <p style="color: #33415C; font-size: 18px;">I'm a computer scientist exploring in the Geoinformatics world. Currently, I'm involved in a couple Geospatial Data Analysis projects, trying to learn as much as possible from my experience abroad.</p>
             </div> <!-- end of col -->
         </div> <!-- end of row -->
     </div>
