--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
                         <div class="image-container">
-                            <img class="img-fluid" style="border-radius: 50%; width: 85%" src="images/prof.jpg" alt="alternative">
+                            <img class="img-fluid" style="border-radius: 50%; width: 85%" src="images/foto.jpeg" alt="alternative">
                         </div> <!-- end of image-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
