--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,7 @@
     	<div class="col-12 text-center" style="padding-top: 100px">
     		<h1 style="color: #33415C;">Resume</h1>
     		<p style="color: #33415C; font-size: 18px;">In case you're interesed in taking a look, here is a picture of it.</p>
-    		<img class="img-fluid" style="width: 70%;" src="images/AngellyCV.png">
+    		<img class="img-fluid" style="width: 70%;" src="images/CV.png">
     	</div>
     	
     </div>
