--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                         </div>
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
-                        <div class="image-container">
-                            <img class="img-fluid" src="images/prof2.jpg" alt="alternative">
+                        <div class="round-img">
+                            
                         </div> <!-- end of image-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -102,7 +102,7 @@
             <div class="col-10 offset-1 text-center" style="padding-top: 60px; padding-bottom: 60px;">
                 <h2 style="color: #33415C;">ABOUT ME</h2>
                 <br/>
-                <p style="color: #33415C; font-size: 18px;">I'm a computer scientist exploring in the Geoinformatics world. Currently, I'm involved in a couple Geospatial Data Analysis projects, trying to learn as much as possible from my experience abroad.</p>
+                <p style="color: #33415C; font-size: 18px;">I'm a computer scientist exploring in the Geoinformatics world. Currently, I'm starting the las semester of my MSc and working on my thesis which is related to machine learning for satellite imagery classification.</p>
             </div> <!-- end of col -->
         </div> <!-- end of row -->
     </div>
