--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="col-10 offset-1 text-center" style="padding-top: 60px; padding-bottom: 60px;">
                 <h2 style="color: #33415C;">ABOUT ME</h2>
                 <br/>
-                <p style="color: #33415C; font-size: 18px;">I'm a computer scientist exploring in the Geoinformatics world. Currently, I'm starting the las semester of my MSc and working on my thesis which is related to machine learning for satellite imagery classification.</p>
+                <p style="color: #33415C; font-size: 18px;">I'm a computer scientist exploring in the Geoinformatics world. Currently, I'm starting the last semester of my MSc and working on my thesis which is related to machine learning for satellite imagery classification.</p>
             </div> <!-- end of col -->
         </div> <!-- end of row -->
     </div>
