--- a/index.html
+++ b/index.html
@@ -138,11 +138,40 @@
                     <img class="card-img-top" style="width: 250px;" src="images/logoB.png" alt="Card image cap"></div>
                     <div class="card-body">
                       <h5 class="card-title">Company Website</h5>
-                      <p class="card-text" style="color: #33415C;">Implementation of a totally new website using Wordpress.</p>
+                      <p class="card-text" style="color: #33415C;">Creation of a totally new website using Wordpress.</p>
                       <a href="https://solucionesyredes.com/" target="_blank" class="btn btn-primary">See more</a>
                     </div>
                   </div>
                 </div>
+                <div class="card-deck" style="margin-top: 20px;">
+                    <div class="card">
+                      <div class="text-center">
+                      <img class="card-img-top" style="width: 300px;" src="images/flipper.PNG" alt="Card image cap"></div>
+                      <div class="card-body">
+                        <h5 class="card-title">Flipper for Computer Graphics class</h5>
+                        <p class="card-text" style="color: #33415C;">It might take a while to load because the assets are heavy.</p>
+                        <a href="https://diuke.github.io/FlipperComputerGraphics/" target="_blank" class="btn btn-primary">See more</a>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <div class="text-center">
+                      <img class="card-img-top" style="width: 220px;" src="images/ISG.png" alt="Card image cap"></div>
+                      <div class="card-body">
+                        <h5 class="card-title">Height Conversion Service</h5>
+                        <p class="card-text" style="color: #33415C;">Conversion from ellipsoidal to orthometric height and viceversa for the International Service for the Geoid.</p>
+                        <a href="https://www.isgeoid.polimi.it/Geoid/height_conversion.html" target="_blank" class="btn btn-primary">See more</a>
+                      </div>
+                    </div>
+                    <div class="card" style="opacity: 0;">
+                      <div class="text-center">
+                      <img class="card-img-top" style="width: 250px;" src="images/logoB.png" alt="Card image cap"></div>
+                      <div class="card-body">
+                        <h5 class="card-title">Company Website</h5>
+                        <p class="card-text" style="color: #33415C;">Implementation of a totally new website using Wordpress.</p>
+                        <a href="https://solucionesyredes.com/" target="_blank" class="btn btn-primary">See more</a>
+                      </div>
+                    </div>
+                  </div>
             </div>
             </div>
             
